# tree-sitter-sdc

./: .gitignore  Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-sdc.h
bindings/node/: binding.cc
bindings/rust/: lib.rs
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: control_flow.txt  new_sdc_commands.txt  sdc_commands.txt  sdc_queries.txt  tcl_constructs.txt  variables.txt
