[package]
name = "tree-sitter-sdc"
description = "SDC grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "SDC"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Leonui/tree-sitter-sdc"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"
